src/main/java/com/example/mybookshopapp/errors/PaymentInitiateException.java
package com.example.mybookshopapp.errors;

public class PaymentInitiateException extends Exception{
    public PaymentInitiateException(String message){
        super(message);
    }
}
